// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AppHeader /> > should not render the banner when no flags are set 1`] = `
"
 ███         █████████
░░░███      ███░░░░░███
  ░░░███   ███     ░░░
    ░░░███░███
     ███░ ░███    █████
   ███░   ░░███  ░░███
 ███░      ░░█████████
░░░         ░░░░░░░░░
"
`;

exports[`<AppHeader /> > should not render the banner when previewFeatures is enabled 1`] = `
"
 ███         █████████
░░░███      ███░░░░░███
  ░░░███   ███     ░░░
    ░░░███░███
     ███░ ░███    █████
   ███░   ░░███  ░░███
 ███░      ░░█████████
░░░         ░░░░░░░░░
"
`;

exports[`<AppHeader /> > should not render the default banner if shown count is 5 or more 1`] = `
"
 ███         █████████
░░░███      ███░░░░░███
  ░░░███   ███     ░░░
    ░░░███░███
     ███░ ░███    █████
   ███░   ░░███  ░░███
 ███░      ░░█████████
░░░         ░░░░░░░░░
"
`;

exports[`<AppHeader /> > should render the banner when previewFeatures is disabled 1`] = `
"
 ███         █████████
░░░███      ███░░░░░███
  ░░░███   ███     ░░░
    ░░░███░███
     ███░ ░███    █████
   ███░   ░░███  ░░███
 ███░      ░░█████████
░░░         ░░░░░░░░░

╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ This is the default banner                                                                                          │
╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<AppHeader /> > should render the banner with default text 1`] = `
"
 ███         █████████
░░░███      ███░░░░░███
  ░░░███   ███     ░░░
    ░░░███░███
     ███░ ░███    █████
   ███░   ░░███  ░░███
 ███░      ░░█████████
░░░         ░░░░░░░░░

╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ This is the default banner                                                                                          │
╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<AppHeader /> > should render the banner with warning text 1`] = `
"
 ███         █████████
░░░███      ███░░░░░███
  ░░░███   ███     ░░░
    ░░░███░███
     ███░ ░███    █████
   ███░   ░░███  ░░███
 ███░      ░░█████████
░░░         ░░░░░░░░░

╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ There are capacity issues                                                                                           │
╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
